// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProductCardSkeleton should match snapshot - compact 1`] = `
<div
  class="block bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-lg overflow-hidden animate-pulse"
>
  <div
    class="relative aspect-square bg-gray-200 dark:bg-gray-700"
  />
  <div
    class="p-3"
  >
    <div
      class="space-y-2 mb-2"
    >
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-3/4"
      />
    </div>
    <div
      class="h-3 bg-gray-200 dark:bg-gray-700 rounded w-1/3 mb-2"
    />
    <div
      class="flex items-baseline gap-2"
    >
      <div
        class="h-6 bg-gray-200 dark:bg-gray-700 rounded w-24"
      />
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-16"
      />
    </div>
  </div>
</div>
`;

exports[`ProductCardSkeleton should match snapshot - default 1`] = `
<div
  class="block bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-lg overflow-hidden animate-pulse"
>
  <div
    class="relative aspect-square bg-gray-200 dark:bg-gray-700"
  />
  <div
    class="p-4"
  >
    <div
      class="space-y-2 mb-2"
    >
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-3/4"
      />
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-1/2"
      />
    </div>
    <div
      class="h-3 bg-gray-200 dark:bg-gray-700 rounded w-1/3 mb-2"
    />
    <div
      class="flex items-center gap-1 mb-2"
    >
      <div
        class="h-4 w-4 bg-gray-200 dark:bg-gray-700 rounded"
      />
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-8"
      />
      <div
        class="h-3 bg-gray-200 dark:bg-gray-700 rounded w-12"
      />
    </div>
    <div
      class="flex items-baseline gap-2"
    >
      <div
        class="h-7 bg-gray-200 dark:bg-gray-700 rounded w-24"
      />
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-16"
      />
    </div>
  </div>
</div>
`;

exports[`ProductCardSkeleton should match snapshot - without shop name 1`] = `
<div
  class="block bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-lg overflow-hidden animate-pulse"
>
  <div
    class="relative aspect-square bg-gray-200 dark:bg-gray-700"
  />
  <div
    class="p-4"
  >
    <div
      class="space-y-2 mb-2"
    >
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-3/4"
      />
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-1/2"
      />
    </div>
    <div
      class="flex items-center gap-1 mb-2"
    >
      <div
        class="h-4 w-4 bg-gray-200 dark:bg-gray-700 rounded"
      />
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-8"
      />
      <div
        class="h-3 bg-gray-200 dark:bg-gray-700 rounded w-12"
      />
    </div>
    <div
      class="flex items-baseline gap-2"
    >
      <div
        class="h-7 bg-gray-200 dark:bg-gray-700 rounded w-24"
      />
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-16"
      />
    </div>
  </div>
</div>
`;
